hphp/test/quick/typechecks-obj.php.expectf
object(C)#%d (0) {
}
object(D)#%d (0) {
}
NULL

Fatal error: Argument 1 passed to f() must be an instance of C, stdClass given in %s on line 6
